crates/normalize/tests/snapshots/cli_snapshots__help_analyze_ast.snap
---
source: crates/normalize/tests/cli_snapshots.rs
expression: "snapshot_help(&[\"analyze\", \"ast\"])"
---
Analyze codebase (health, complexity, security, duplicates, docs)

Usage: normalize analyze [OPTIONS] [COMMAND]

Commands:
  check-refs           Check for broken documentation references
  stale-docs           Check for stale documentation
  check-examples       Check for missing example references in documentation
  call-graph           Show AST structure for a file
                       Show callers and/or callees of a symbol
  trace                Trace value provenance for a symbol
  architecture         Show architecture analysis (coupling, cycles, hubs)
  health               Run health analysis (file counts, complexity stats, large file warnings)
  all                  Run all analysis passes
  security             Run security analysis
  complexity           Run complexity analysis
  length               Run function length analysis
  docs                 Analyze documentation coverage
  files                Show longest files in codebase
  size                 Show hierarchical LOC breakdown (ncdu-style)
  ceremony             Show ceremony ratio: fraction of callables that are trait/interface boilerplate
  clusters             Group similar functions into structural clusters (connected components of similar-functions pairs)
  hotspots             Show git history hotspots (frequently changed files)
  coupling             Find files that frequently change together (temporal coupling)
  ownership            Show per-file ownership concentration from git blame
  contributors         Analyze contributors across repos
  activity             Analyze cross-repo activity over time
  repo-coupling        Analyze cross-repo coupling
  cross-repo-health    Detect duplicate functions (code clones)
                       Rank repos by tech debt (churn + complexity + coupling)
  duplicate-functions  
  duplicate-blocks     Detect duplicate code blocks
  similar-functions    Detect similar functions via MinHash LSH
  similar-blocks       Detect similar code blocks via MinHash LSH
  duplicate-types      Detect duplicate type definitions
  budget               Show line budget breakdown by purpose (logic, test, docs, config, generated, vendored)
  test-ratio           Show test/impl line ratio per module (sorted by least-tested first)
  imports              Rank modules by import fan-in (requires facts index)
  test-gaps            Find public functions with no direct test caller
  callers              Show callers of a symbol
  callees              Show what functions a symbol calls
  help                 Print this message or the help of the given subcommand(s)

Options:
      --jsonl                      Output one JSON object per line (for arrays)
      --json                       Output machine-readable JSON
      --jq <jq>                    Filter output through jq expression
      --input-schema               Print JSON Schema of the subcommand's input parameters and exit
      --output-schema              Print JSON Schema of the subcommand's return type and exit
      --params-json <params-json>  Provide all parameters as a JSON object instead of individual flags
  -h, --help                       Print help
  -V, --version                    Print version
