crates/normalize/tests/snapshots/cli_snapshots__help_analyze_callers.snap
---
source: crates/normalize/tests/cli_snapshots.rs
expression: "snapshot_help(&[\"analyze\", \"callers\"])"
---
Show callers of a symbol

Usage: normalize analyze callers [OPTIONS] [symbol]

Arguments:
  [symbol]  Symbol to find callers for

Options:
  -i, --case-insensitive           Case-insensitive symbol matching
      --jsonl                      Output one JSON object per line (for arrays)
      --json                       Output machine-readable JSON
  -r, --root <root>                Root directory (defaults to current directory)
      --jq <jq>                    Filter output through jq expression
      --input-schema               Print JSON Schema of the subcommand's input parameters and exit
      --output-schema              Print JSON Schema of the subcommand's return type and exit
      --params-json <params-json>  Provide all parameters as a JSON object instead of individual flags
  -h, --help                       Print help
