crates/normalize/tests/snapshots/cli_snapshots__help_analyze_check_refs.snap
---
source: crates/normalize/tests/cli_snapshots.rs
expression: "snapshot_help(&[\"analyze\", \"check-refs\"])"
---
Check for broken documentation references

Usage: normalize analyze check-refs [OPTIONS]

Options:
      --jsonl                      Output one JSON object per line (for arrays)
  -r, --root <root>                Root directory (defaults to current directory)
      --json                       Output machine-readable JSON
      --jq <jq>                    Filter output through jq expression
      --input-schema               Print JSON Schema of the subcommand's input parameters and exit
      --output-schema              Print JSON Schema of the subcommand's return type and exit
      --params-json <params-json>  Provide all parameters as a JSON object instead of individual flags
  -h, --help                       Print help
