crates/normalize/tests/snapshots/cli_snapshots__help_analyze_complexity.snap
---
source: crates/normalize/tests/cli_snapshots.rs
expression: "snapshot_help(&[\"analyze\", \"complexity\"])"
---
Run complexity analysis

Usage: normalize analyze complexity [OPTIONS] [target]

Arguments:
  [target]  Target file or directory

Options:
      --jsonl                      Output one JSON object per line (for arrays)
  -r, --root <root>                Root directory (defaults to current directory)
      --json                       Output machine-readable JSON
  -t, --threshold <threshold>      Only show functions above this threshold
      --jq <jq>                    Filter output through jq expression
  -l, --limit <limit>              Maximum number of functions to show (0=no limit)
      --exclude <exclude>          Exclude paths matching pattern
      --input-schema               Print JSON Schema of the subcommand's input parameters and exit
      --only <only>                Include only paths matching pattern
      --output-schema              Print JSON Schema of the subcommand's return type and exit
      --diff <diff>                Show delta vs this git ref (branch, tag, commit, HEAD~N)
      --params-json <params-json>  Provide all parameters as a JSON object instead of individual flags
      --pretty                     Enable pretty
      --compact                    Enable compact
  -h, --help                       Print help

Examples:
normalize analyze complexity                          # top 10 most complex functions
normalize analyze complexity src/ --threshold 15      # only functions above threshold
normalize analyze complexity --diff main              # show delta vs main branch
