crates/normalize/tests/snapshots/cli_snapshots__help_analyze_coupling.snap
---
source: crates/normalize/tests/cli_snapshots.rs
expression: "snapshot_help(&[\"analyze\", \"coupling\"])"
---
Find files that frequently change together (temporal coupling)

Usage: normalize analyze coupling [OPTIONS]

Options:
      --jsonl                      Output one JSON object per line (for arrays)
      --min-commits <min-commits>  Minimum number of shared commits to report a pair
      --json                       Output machine-readable JSON
  -l, --limit <limit>              Maximum number of pairs to show (0=no limit)
      --jq <jq>                    Filter output through jq expression
  -r, --root <root>                Root directory (defaults to current directory)
      --exclude <exclude>          Exclude paths matching pattern
      --input-schema               Print JSON Schema of the subcommand's input parameters and exit
      --output-schema              Print JSON Schema of the subcommand's return type and exit
      --repos <repos>              Run across all git repos under DIR
      --params-json <params-json>  Provide all parameters as a JSON object instead of individual flags
      --repos-depth <repos-depth>  Max depth to search for repos (default: 1)
  -h, --help                       Print help
