crates/normalize/tests/snapshots/cli_snapshots__help_analyze_docs.snap
---
source: crates/normalize/tests/cli_snapshots.rs
expression: "snapshot_help(&[\"analyze\", \"docs\"])"
---
Measure documentation coverage: which public symbols lack doc comments.

Usage: normalize analyze docs [OPTIONS]

Options:
  -l, --limit <limit>              Maximum number of files to show (0=no limit)
      --pretty                     Human-friendly output with colors and formatting
      --compact                    Compact output without colors (overrides TTY detection)
  -r, --root <root>                Root directory (defaults to current directory)
      --exclude <exclude>          Exclude paths matching pattern
      --jsonl                      Output one JSON object per line (for arrays)
      --json                       Output machine-readable JSON
      --only <only>                Include only paths matching pattern
      --jq <jq>                    Filter output through jq expression
      --input-schema               Print JSON Schema of the subcommand's input parameters and exit
      --output-schema              Print JSON Schema of the subcommand's return type and exit
      --manual                     Emit the reference manual for the command subtree rooted here and exit
      --params-json <params-json>  Provide all parameters as a JSON object instead of individual flags
  -h, --help                       Print help

Finds undocumented public symbols, missing docstrings, and documentation gaps.
Also known as: doc coverage, missing documentation, undocumented API surface.

Returns a `DocCoverageReport` listing files ranked by undocumented public symbols,
with per-file and overall coverage percentages. Respects the `exclude_interface_impls`
config option to skip auto-generated trait implementations.
